@@ -43,6 +43,7 @@ private Q_SLOTS:
   void testSkylab();
   void testComic();
   void testBaseballCard();
+  void testGoldeneye();
 
 private:
   KConfigGroup m_config;
