@@ -1,3 +1,7 @@
+2023-04-29  Robby Stephenson  <robby@periapsis.org>
+
+	* Updated Colnect data source to include video game collections.
+
 2023-04-26  Robby Stephenson  <robby@periapsis.org>
 
 	* Updated Colnect data source to include sports card collections.
